implementing MIDI UMP support

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1365,6 +1365,24 @@ ags_midi_ump_util_get_function_block_info_notification
 ags_midi_ump_util_is_function_block_name_notification
 ags_midi_ump_util_put_function_block_name_notification
 ags_midi_ump_util_get_function_block_name_notification
+ags_midi_ump_util_is_start_of_clip
+ags_midi_ump_util_put_start_of_clip
+ags_midi_ump_util_get_start_of_clip
+ags_midi_ump_util_is_end_of_clip
+ags_midi_ump_util_put_end_of_clip
+ags_midi_ump_util_get_end_of_clip
+ags_midi_ump_util_is_noop
+ags_midi_ump_util_put_noop
+ags_midi_ump_util_get_noop
+ags_midi_ump_util_is_jr_clock
+ags_midi_ump_util_put_jr_clock
+ags_midi_ump_util_get_jr_clock
+ags_midi_ump_util_is_delta_clock_ticks_per_quarter_note
+ags_midi_ump_util_put_delta_clock_ticks_per_quarter_note
+ags_midi_ump_util_get_delta_clock_ticks_per_quarter_note
+ags_midi_ump_util_is_delta_clock_ticks_since_last_event
+ags_midi_ump_util_put_delta_clock_ticks_since_last_event
+ags_midi_ump_util_get_delta_clock_ticks_since_last_event
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
