implementing MIDI UMP support

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1383,6 +1383,9 @@ ags_midi_ump_util_get_delta_clock_ticks_per_quarter_note
 ags_midi_ump_util_is_delta_clock_ticks_since_last_event
 ags_midi_ump_util_put_delta_clock_ticks_since_last_event
 ags_midi_ump_util_get_delta_clock_ticks_since_last_event
+ags_midi_ump_util_is_midi1_channel_voice
+ags_midi_ump_util_put_midi1_channel_voice
+ags_midi_ump_util_get_midi1_channel_voice
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
