implementing MIDI UMP support

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1446,6 +1446,18 @@ ags_midi_ump_util_get_midi2_program_change
 ags_midi_ump_util_is_midi2_channel_pressure
 ags_midi_ump_util_put_midi2_channel_pressure
 ags_midi_ump_util_get_midi2_channel_pressure
+ags_midi_ump_util_is_midi2_pitch_bend
+ags_midi_ump_util_put_midi2_pitch_bend
+ags_midi_ump_util_get_midi2_pitch_bend
+ags_midi_ump_util_is_midi2_per_note_pitch_bend
+ags_midi_ump_util_put_midi2_per_note_pitch_bend
+ags_midi_ump_util_get_midi2_per_note_pitch_bend
+ags_midi_ump_util_is_flex_set_tempo
+ags_midi_ump_util_put_flex_set_tempo
+ags_midi_ump_util_get_flex_set_tempo
+ags_midi_ump_util_is_flex_set_time_signature
+ags_midi_ump_util_put_flex_set_time_signature
+ags_midi_ump_util_get_flex_set_time_signature
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
