implementing MIDI UMP support

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1458,6 +1458,12 @@ ags_midi_ump_util_get_flex_set_tempo
 ags_midi_ump_util_is_flex_set_time_signature
 ags_midi_ump_util_put_flex_set_time_signature
 ags_midi_ump_util_get_flex_set_time_signature
+ags_midi_ump_util_is_flex_set_metronome
+ags_midi_ump_util_put_flex_set_metronome
+ags_midi_ump_util_get_flex_set_metronome
+ags_midi_ump_util_is_flex_set_key_signature
+ags_midi_ump_util_put_flex_set_key_signature
+ags_midi_ump_util_get_flex_set_key_signature
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
