--- a/docs/reference/libags-audio/libags_audio.xml.in
+++ b/docs/reference/libags-audio/libags_audio.xml.in
@@ -312,6 +312,7 @@
       <xi:include href="xml/ags_midi_util.xml"/>
       <xi:include href="xml/ags_midi_builder.xml"/>
       <xi:include href="xml/ags_midi_parser.xml"/>
+      <xi:include href="xml/ags_midi_ump_util.xml"/>
     </chapter>
 
     <chapter id="audio-osc">
