--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1461,6 +1461,7 @@ ags_midi_ump_util_get_flex_set_key_signature
 ags_midi_ump_util_is_flex_set_chord_name
 ags_midi_ump_util_put_flex_set_chord_name
 ags_midi_ump_util_get_flex_set_chord_name
+ags_midi_ump_util_is_flex_set_text
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
@@ -1575,62 +1576,65 @@ ags_midi_builder_get_data_with_length
 ags_midi_builder_write
 ags_midi_builder_new
 ags_midi_builder_new_from_filename
-ags_midi_buffer_util_get_type
-ags_midi_buffer_util_get_varlength_size
-ags_midi_buffer_util_put_varlength
-ags_midi_buffer_util_get_varlength
-ags_midi_buffer_util_put_int16
-ags_midi_buffer_util_get_int16
-ags_midi_buffer_util_put_int24
-ags_midi_buffer_util_get_int24
-ags_midi_buffer_util_put_int32
-ags_midi_buffer_util_get_int32
-ags_midi_buffer_util_put_header
-ags_midi_buffer_util_get_header
-ags_midi_buffer_util_put_track
-ags_midi_buffer_util_get_track
-ags_midi_buffer_util_put_key_on
-ags_midi_buffer_util_get_key_on
-ags_midi_buffer_util_put_key_off
-ags_midi_buffer_util_get_key_off
-ags_midi_buffer_util_put_key_pressure
-ags_midi_buffer_util_get_key_pressure
-ags_midi_buffer_util_put_change_parameter
-ags_midi_buffer_util_get_change_parameter
-ags_midi_buffer_util_put_pitch_bend
-ags_midi_buffer_util_get_pitch_bend
-ags_midi_buffer_util_put_change_program
-ags_midi_buffer_util_get_change_program
-ags_midi_buffer_util_put_change_pressure
-ags_midi_buffer_util_get_change_pressure
-ags_midi_buffer_util_put_sysex
-ags_midi_buffer_util_get_sysex
-ags_midi_buffer_util_put_quarter_frame
-ags_midi_buffer_util_get_quarter_frame
-ags_midi_buffer_util_put_song_position
-ags_midi_buffer_util_get_song_position
-ags_midi_buffer_util_put_song_select
-ags_midi_buffer_util_get_song_select
-ags_midi_buffer_util_put_tune_request
-ags_midi_buffer_util_get_tune_request
-ags_midi_buffer_util_put_sequence_number
-ags_midi_buffer_util_get_sequence_number
-ags_midi_buffer_util_put_smtpe
-ags_midi_buffer_util_get_smtpe
-ags_midi_buffer_util_put_tempo
-ags_midi_buffer_util_get_tempo
-ags_midi_buffer_util_put_time_signature
-ags_midi_buffer_util_get_time_signature
-ags_midi_buffer_util_put_key_signature
-ags_midi_buffer_util_get_key_signature
-ags_midi_buffer_util_put_sequencer_meta_event
-ags_midi_buffer_util_get_sequencer_meta_event
-ags_midi_buffer_util_put_text_event
-ags_midi_buffer_util_get_text_event
-ags_midi_buffer_util_put_end_of_track
-ags_midi_buffer_util_get_end_of_track
-ags_midi_buffer_util_seek_message
-ags_midi_buffer_util_decode
+ags_midi_smf_util_get_type
+ags_midi_smf_util_alloc
+ags_midi_smf_util_free
+ags_midi_smf_util_copy
+ags_midi_smf_util_get_varlength_size
+ags_midi_smf_util_put_varlength
+ags_midi_smf_util_get_varlength
+ags_midi_smf_util_put_int16
+ags_midi_smf_util_get_int16
+ags_midi_smf_util_put_int24
+ags_midi_smf_util_get_int24
+ags_midi_smf_util_put_int32
+ags_midi_smf_util_get_int32
+ags_midi_smf_util_put_header
+ags_midi_smf_util_get_header
+ags_midi_smf_util_put_track
+ags_midi_smf_util_get_track
+ags_midi_smf_util_put_key_on
+ags_midi_smf_util_get_key_on
+ags_midi_smf_util_put_key_off
+ags_midi_smf_util_get_key_off
+ags_midi_smf_util_put_key_pressure
+ags_midi_smf_util_get_key_pressure
+ags_midi_smf_util_put_change_parameter
+ags_midi_smf_util_get_change_parameter
+ags_midi_smf_util_put_pitch_bend
+ags_midi_smf_util_get_pitch_bend
+ags_midi_smf_util_put_change_program
+ags_midi_smf_util_get_change_program
+ags_midi_smf_util_put_change_pressure
+ags_midi_smf_util_get_change_pressure
+ags_midi_smf_util_put_sysex
+ags_midi_smf_util_get_sysex
+ags_midi_smf_util_put_quarter_frame
+ags_midi_smf_util_get_quarter_frame
+ags_midi_smf_util_put_song_position
+ags_midi_smf_util_get_song_position
+ags_midi_smf_util_put_song_select
+ags_midi_smf_util_get_song_select
+ags_midi_smf_util_put_tune_request
+ags_midi_smf_util_get_tune_request
+ags_midi_smf_util_put_sequence_number
+ags_midi_smf_util_get_sequence_number
+ags_midi_smf_util_put_smtpe
+ags_midi_smf_util_get_smtpe
+ags_midi_smf_util_put_tempo
+ags_midi_smf_util_get_tempo
+ags_midi_smf_util_put_time_signature
+ags_midi_smf_util_get_time_signature
+ags_midi_smf_util_put_key_signature
+ags_midi_smf_util_get_key_signature
+ags_midi_smf_util_put_sequencer_meta_event
+ags_midi_smf_util_get_sequencer_meta_event
+ags_midi_smf_util_put_text_event
+ags_midi_smf_util_get_text_event
+ags_midi_smf_util_put_end_of_track
+ags_midi_smf_util_get_end_of_track
+ags_midi_smf_util_seek_message
+ags_midi_smf_util_decode
 ags_midi_ci_util_get_type
 ags_midi_ci_util_alloc
 ags_midi_ci_util_free
@@ -1812,6 +1816,9 @@ ags_osc_util_slip_encode
 ags_osc_util_slip_decode
 ags_osc_util_timetag_now
 ags_osc_buffer_util_get_type
+ags_osc_buffer_util_alloc
+ags_osc_buffer_util_free
+ags_osc_buffer_util_copy
 ags_osc_buffer_util_put_int32
 ags_osc_buffer_util_get_int32
 ags_osc_buffer_util_put_timetag
