--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -135,7 +135,7 @@ libags_audio_installcheck_programs += \
 	ags_check_system_buffer_test \
 	ags_check_system_midi_test \
 	ags_check_system_track_test \
-	ags_check_system_midi_buffer_util_test \
+	ags_check_system_midi_smf_util_test \
 	ags_check_system_midi_builder_test \
 	ags_check_system_midi_ci_util_test \
 	ags_check_system_midi_ump_util_test
@@ -1053,12 +1053,12 @@ ags_check_system_track_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_track_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_track_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lm -lrt $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
-# midi buffer util unit test
-ags_check_system_midi_buffer_util_test_SOURCES = ags/test/audio/midi/ags_midi_buffer_util_test.c
-ags_check_system_midi_buffer_util_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
-ags_check_system_midi_buffer_util_test_CPPFLAGS = $(AGS_FEATURES)
-ags_check_system_midi_buffer_util_test_LDFLAGS = -pthread $(LDFLAGS)
-ags_check_system_midi_buffer_util_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lm -lrt  $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+# midi smf util unit test
+ags_check_system_midi_smf_util_test_SOURCES = ags/test/audio/midi/ags_midi_smf_util_test.c
+ags_check_system_midi_smf_util_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_midi_smf_util_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_midi_smf_util_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_midi_smf_util_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lm -lrt  $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
 # midi builder unit test
 ags_check_system_midi_builder_test_SOURCES = ags/test/audio/midi/ags_midi_builder_test.c
@@ -1067,7 +1067,7 @@ ags_check_system_midi_builder_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_midi_builder_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_midi_builder_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lm -lrt  $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
-# midi ci 1.1 util unit test
+# midi ci util unit test
 ags_check_system_midi_ci_util_test_SOURCES = ags/test/audio/midi/ags_midi_ci_util_test.c
 ags_check_system_midi_ci_util_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
 ags_check_system_midi_ci_util_test_CPPFLAGS = $(AGS_FEATURES)
@@ -2122,7 +2122,7 @@ ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_insta
 	./ags_check_system_buffer_test
 	./ags_check_system_midi_test
 	./ags_check_system_track_test
-	./ags_check_system_midi_buffer_util_test
+	./ags_check_system_midi_smf_util_test
 	./ags_check_system_midi_builder_test
 	./ags_check_system_osc_buffer_util_test
 	./ags_check_system_osc_client_test
