--- a/docs/reference/libags-audio/libags_audio-sections.txt.in
+++ b/docs/reference/libags-audio/libags_audio-sections.txt.in
@@ -965,11 +965,11 @@ ags_audio_signal_get_type
 <FILE>ags_audio_thread</FILE>
 <TITLE>AgsAudioThread</TITLE>
 AGS_AUDIO_THREAD_DEFAULT_JIFFIE
-AgsAudioThreadStatusFlags
+AgsAudioThreadNestedSyncFlags
 AgsAudioThreadScopeData
-ags_audio_thread_test_status_flags
-ags_audio_thread_set_status_flags
-ags_audio_thread_unset_status_flags
+ags_audio_thread_test_nested_sync_flags
+ags_audio_thread_set_nested_sync_flags
+ags_audio_thread_unset_nested_sync_flags
 ags_audio_thread_get_processing
 ags_audio_thread_set_processing
 ags_audio_thread_get_task_launcher
@@ -1541,10 +1541,10 @@ ags_channel_get_type
 <FILE>ags_channel_thread</FILE>
 <TITLE>AgsChannelThread</TITLE>
 AGS_CHANNEL_THREAD_DEFAULT_JIFFIE
-AgsChannelThreadStatusFlags
-ags_channel_thread_test_status_flags
-ags_channel_thread_set_status_flags
-ags_channel_thread_unset_status_flags
+AgsChannelThreadNestedSyncFlags
+ags_channel_thread_test_nested_sync_flags
+ags_channel_thread_set_nested_sync_flags
+ags_channel_thread_unset_nested_sync_flags
 ags_channel_thread_get_processing
 ags_channel_thread_set_processing
 ags_channel_thread_get_task_launcher
@@ -6444,71 +6444,6 @@ ags_midi_get_type
 </SECTION>
 
 <SECTION>
-<FILE>ags_midi_buffer_util</FILE>
-AgsMidiBufferUtilMtcQuarterFrameMessageType
-AgsMidiBufferUtilSmtpeFrameRate
-ags_midi_buffer_util_get_varlength_size
-ags_midi_buffer_util_put_varlength
-ags_midi_buffer_util_get_varlength
-ags_midi_buffer_util_put_int16
-ags_midi_buffer_util_get_int16
-ags_midi_buffer_util_put_int24
-ags_midi_buffer_util_get_int24
-ags_midi_buffer_util_put_int32
-ags_midi_buffer_util_get_int32
-ags_midi_buffer_util_put_header
-ags_midi_buffer_util_get_header
-ags_midi_buffer_util_put_track
-ags_midi_buffer_util_get_track
-ags_midi_buffer_util_put_key_on
-ags_midi_buffer_util_get_key_on
-ags_midi_buffer_util_put_key_off
-ags_midi_buffer_util_get_key_off
-ags_midi_buffer_util_put_key_pressure
-ags_midi_buffer_util_get_key_pressure
-ags_midi_buffer_util_put_change_parameter
-ags_midi_buffer_util_get_change_parameter
-ags_midi_buffer_util_put_pitch_bend
-ags_midi_buffer_util_get_pitch_bend
-ags_midi_buffer_util_put_change_program
-ags_midi_buffer_util_get_change_program
-ags_midi_buffer_util_put_change_pressure
-ags_midi_buffer_util_get_change_pressure
-ags_midi_buffer_util_put_sysex
-ags_midi_buffer_util_get_sysex
-ags_midi_buffer_util_put_quarter_frame
-ags_midi_buffer_util_get_quarter_frame
-ags_midi_buffer_util_put_song_position
-ags_midi_buffer_util_get_song_position
-ags_midi_buffer_util_put_song_select
-ags_midi_buffer_util_get_song_select
-ags_midi_buffer_util_put_tune_request
-ags_midi_buffer_util_get_tune_request
-ags_midi_buffer_util_put_sequence_number
-ags_midi_buffer_util_get_sequence_number
-ags_midi_buffer_util_put_smtpe
-ags_midi_buffer_util_get_smtpe
-ags_midi_buffer_util_put_tempo
-ags_midi_buffer_util_get_tempo
-ags_midi_buffer_util_put_time_signature
-ags_midi_buffer_util_get_time_signature
-ags_midi_buffer_util_put_key_signature
-ags_midi_buffer_util_get_key_signature
-ags_midi_buffer_util_put_sequencer_meta_event
-ags_midi_buffer_util_get_sequencer_meta_event
-ags_midi_buffer_util_put_text_event
-ags_midi_buffer_util_get_text_event
-ags_midi_buffer_util_put_end_of_track
-ags_midi_buffer_util_get_end_of_track
-ags_midi_buffer_util_seek_message
-ags_midi_buffer_util_decode
-<SUBSECTION Standard>
-AGS_TYPE_MIDI_BUFFER_UTIL
-AgsMidiBufferUtil
-ags_midi_buffer_util_get_type
-</SECTION>
-
-<SECTION>
 <FILE>ags_midi_builder</FILE>
 <TITLE>AgsMidiBuilder</TITLE>
 AGS_MIDI_BUILDER_GET_OBJ_MUTEX
@@ -6794,6 +6729,74 @@ ags_midi_parser_get_type
 </SECTION>
 
 <SECTION>
+<FILE>ags_midi_smf_util</FILE>
+AgsMidiSmfUtilMtcQuarterFrameMessageType
+AgsMidiSmfUtilSmtpeFrameRate
+ags_midi_smf_util_alloc
+ags_midi_smf_util_free
+ags_midi_smf_util_copy
+ags_midi_smf_util_get_varlength_size
+ags_midi_smf_util_put_varlength
+ags_midi_smf_util_get_varlength
+ags_midi_smf_util_put_int16
+ags_midi_smf_util_get_int16
+ags_midi_smf_util_put_int24
+ags_midi_smf_util_get_int24
+ags_midi_smf_util_put_int32
+ags_midi_smf_util_get_int32
+ags_midi_smf_util_put_header
+ags_midi_smf_util_get_header
+ags_midi_smf_util_put_track
+ags_midi_smf_util_get_track
+ags_midi_smf_util_put_key_on
+ags_midi_smf_util_get_key_on
+ags_midi_smf_util_put_key_off
+ags_midi_smf_util_get_key_off
+ags_midi_smf_util_put_key_pressure
+ags_midi_smf_util_get_key_pressure
+ags_midi_smf_util_put_change_parameter
+ags_midi_smf_util_get_change_parameter
+ags_midi_smf_util_put_pitch_bend
+ags_midi_smf_util_get_pitch_bend
+ags_midi_smf_util_put_change_program
+ags_midi_smf_util_get_change_program
+ags_midi_smf_util_put_change_pressure
+ags_midi_smf_util_get_change_pressure
+ags_midi_smf_util_put_sysex
+ags_midi_smf_util_get_sysex
+ags_midi_smf_util_put_quarter_frame
+ags_midi_smf_util_get_quarter_frame
+ags_midi_smf_util_put_song_position
+ags_midi_smf_util_get_song_position
+ags_midi_smf_util_put_song_select
+ags_midi_smf_util_get_song_select
+ags_midi_smf_util_put_tune_request
+ags_midi_smf_util_get_tune_request
+ags_midi_smf_util_put_sequence_number
+ags_midi_smf_util_get_sequence_number
+ags_midi_smf_util_put_smtpe
+ags_midi_smf_util_get_smtpe
+ags_midi_smf_util_put_tempo
+ags_midi_smf_util_get_tempo
+ags_midi_smf_util_put_time_signature
+ags_midi_smf_util_get_time_signature
+ags_midi_smf_util_put_key_signature
+ags_midi_smf_util_get_key_signature
+ags_midi_smf_util_put_sequencer_meta_event
+ags_midi_smf_util_get_sequencer_meta_event
+ags_midi_smf_util_put_text_event
+ags_midi_smf_util_get_text_event
+ags_midi_smf_util_put_end_of_track
+ags_midi_smf_util_get_end_of_track
+ags_midi_smf_util_seek_message
+ags_midi_smf_util_decode
+<SUBSECTION Standard>
+AGS_TYPE_MIDI_SMF_UTIL
+AgsMidiSmfUtil
+ags_midi_smf_util_get_type
+</SECTION>
+
+<SECTION>
 <FILE>ags_midi_stream_reader</FILE>
 
 </SECTION>
@@ -6803,27 +6806,20 @@ ags_midi_parser_get_type
 AgsUmpWord
 AgsMidiUmpStreamMessageFormat
 AgsMidiUmpEndpointDiscoveryFilterBitmap
+AgsMidiProtocol
+AgsMidiUmpFunctionBlockDiscoveryFilterBitmap
+AgsMidiDirection
+AgsMidiAttributeType
+AgsMidi1PortMode
+AgsMidi2PerNoteManagementOptionsFlags
+AgsMidi2CCIndex
 ags_midi_ump_util_alloc
 ags_midi_ump_util_free
 ags_midi_ump_util_copy
 ags_midi_ump_util_is_system_common
-ags_midi_ump_util_put_system_common
-ags_midi_ump_util_get_system_common
-ags_midi_ump_util_is_midi1_channel_voice
-ags_midi_ump_util_put_midi1_channel_voice
-ags_midi_ump_util_get_midi1_channel_voice
 ags_midi_ump_util_is_data_message_with_sysex
-ags_midi_ump_util_put_data_message_with_sysex
-ags_midi_ump_util_get_data_message_with_sysex
 ags_midi_ump_util_is_data_message
-ags_midi_ump_util_put_data_message
-ags_midi_ump_util_get_data_message
-ags_midi_ump_util_is_midi2_channel_voice
-ags_midi_ump_util_put_midi2_channel_voice
-ags_midi_ump_util_get_midi2_channel_voice
 ags_midi_ump_util_is_stream_message
-ags_midi_ump_util_put_stream_message
-ags_midi_ump_util_get_stream_message
 ags_midi_ump_util_is_endpoint_discovery
 ags_midi_ump_util_put_endpoint_discovery
 ags_midi_ump_util_get_endpoint_discovery
@@ -6839,6 +6835,129 @@ ags_midi_ump_util_get_endpoint_name_notification
 ags_midi_ump_util_is_product_instance_id_notification
 ags_midi_ump_util_put_product_instance_id_notification
 ags_midi_ump_util_get_product_instance_id_notification
+ags_midi_ump_util_is_stream_configuration_request
+ags_midi_ump_util_put_stream_configuration_request
+ags_midi_ump_util_get_stream_configuration_request
+ags_midi_ump_util_is_stream_configuration_notification
+ags_midi_ump_util_put_stream_configuration_notification
+ags_midi_ump_util_get_stream_configuration_notification
+ags_midi_ump_util_is_function_block_discovery
+ags_midi_ump_util_put_function_block_discovery
+ags_midi_ump_util_get_function_block_discovery
+ags_midi_ump_util_is_function_block_info_notification
+ags_midi_ump_util_put_function_block_info_notification
+ags_midi_ump_util_get_function_block_info_notification
+ags_midi_ump_util_is_function_block_name_notification
+ags_midi_ump_util_put_function_block_name_notification
+ags_midi_ump_util_get_function_block_name_notification
+ags_midi_ump_util_is_start_of_clip
+ags_midi_ump_util_put_start_of_clip
+ags_midi_ump_util_get_start_of_clip
+ags_midi_ump_util_is_end_of_clip
+ags_midi_ump_util_put_end_of_clip
+ags_midi_ump_util_get_end_of_clip
+ags_midi_ump_util_is_noop
+ags_midi_ump_util_put_noop
+ags_midi_ump_util_get_noop
+ags_midi_ump_util_is_jr_clock
+ags_midi_ump_util_put_jr_clock
+ags_midi_ump_util_get_jr_clock
+ags_midi_ump_util_is_jr_timestamp
+ags_midi_ump_util_put_jr_timestamp
+ags_midi_ump_util_get_jr_timestamp
+ags_midi_ump_util_is_delta_clock_ticks_per_quarter_note
+ags_midi_ump_util_put_delta_clock_ticks_per_quarter_note
+ags_midi_ump_util_get_delta_clock_ticks_per_quarter_note
+ags_midi_ump_util_is_delta_clock_ticks_since_last_event
+ags_midi_ump_util_put_delta_clock_ticks_since_last_event
+ags_midi_ump_util_get_delta_clock_ticks_since_last_event
+ags_midi_ump_util_is_midi1_channel_voice
+ags_midi_ump_util_is_midi1_note_off
+ags_midi_ump_util_put_midi1_note_off
+ags_midi_ump_util_get_midi1_note_off
+ags_midi_ump_util_is_midi1_note_on
+ags_midi_ump_util_put_midi1_note_on
+ags_midi_ump_util_get_midi1_note_on
+ags_midi_ump_util_is_midi1_polyphonic_aftertouch
+ags_midi_ump_util_put_midi1_polyphonic_aftertouch
+ags_midi_ump_util_get_midi1_polyphonic_aftertouch
+ags_midi_ump_util_is_midi1_control_change
+ags_midi_ump_util_put_midi1_control_change
+ags_midi_ump_util_get_midi1_control_change
+ags_midi_ump_util_is_midi1_program_change
+ags_midi_ump_util_put_midi1_program_change
+ags_midi_ump_util_get_midi1_program_change
+ags_midi_ump_util_is_midi1_channel_pressure
+ags_midi_ump_util_put_midi1_channel_pressure
+ags_midi_ump_util_get_midi1_channel_pressure
+ags_midi_ump_util_is_midi1_pitch_bend
+ags_midi_ump_util_put_midi1_pitch_bend
+ags_midi_ump_util_get_midi1_pitch_bend
+ags_midi_ump_util_is_midi2_channel_voice
+ags_midi_ump_util_is_midi2_note_off
+ags_midi_ump_util_put_midi2_note_off
+ags_midi_ump_util_get_midi2_note_off
+ags_midi_ump_util_is_midi2_note_on
+ags_midi_ump_util_put_midi2_note_on
+ags_midi_ump_util_get_midi2_note_on
+ags_midi_ump_util_is_midi2_polyphonic_aftertouch
+ags_midi_ump_util_put_midi2_polyphonic_aftertouch
+ags_midi_ump_util_get_midi2_polyphonic_aftertouch
+ags_midi_ump_util_is_midi2_registered_per_note_controller
+ags_midi_ump_util_put_midi2_registered_per_note_controller
+ags_midi_ump_util_get_midi2_registered_per_note_controller
+ags_midi_ump_util_is_midi2_assignable_per_note_controller
+ags_midi_ump_util_put_midi2_assignable_per_note_controller
+ags_midi_ump_util_get_midi2_assignable_per_note_controller
+ags_midi_ump_util_is_midi2_per_note_management
+ags_midi_ump_util_put_midi2_per_note_management
+ags_midi_ump_util_get_midi2_per_note_management
+ags_midi_ump_util_is_midi2_control_change
+ags_midi_ump_util_put_midi2_control_change
+ags_midi_ump_util_get_midi2_control_change
+ags_midi_ump_util_is_midi2_rpn_pitch_bend_range
+ags_midi_ump_util_put_midi2_rpn_pitch_bend_range
+ags_midi_ump_util_get_midi2_rpn_pitch_bend_range
+ags_midi_ump_util_is_midi2_rpn_coarse_tuning
+ags_midi_ump_util_put_midi2_rpn_coarse_tuning
+ags_midi_ump_util_get_midi2_rpn_coarse_tuning
+ags_midi_ump_util_is_midi2_rpn_tuning_program_change
+ags_midi_ump_util_put_midi2_rpn_tuning_program_change
+ags_midi_ump_util_get_midi2_rpn_tuning_program_change
+ags_midi_ump_util_is_midi2_rpn_tuning_bank_select
+ags_midi_ump_util_put_midi2_rpn_tuning_bank_select
+ags_midi_ump_util_get_midi2_rpn_tuning_bank_select
+ags_midi_ump_util_is_midi2_rpn_mpe_mcm
+ags_midi_ump_util_put_midi2_rpn_mpe_mcm
+ags_midi_ump_util_get_midi2_rpn_mpe_mcm
+ags_midi_ump_util_is_midi2_program_change
+ags_midi_ump_util_put_midi2_program_change
+ags_midi_ump_util_get_midi2_program_change
+ags_midi_ump_util_is_midi2_channel_pressure
+ags_midi_ump_util_put_midi2_channel_pressure
+ags_midi_ump_util_get_midi2_channel_pressure
+ags_midi_ump_util_is_midi2_pitch_bend
+ags_midi_ump_util_put_midi2_pitch_bend
+ags_midi_ump_util_get_midi2_pitch_bend
+ags_midi_ump_util_is_midi2_per_note_pitch_bend
+ags_midi_ump_util_put_midi2_per_note_pitch_bend
+ags_midi_ump_util_get_midi2_per_note_pitch_bend
+ags_midi_ump_util_is_flex_set_tempo
+ags_midi_ump_util_put_flex_set_tempo
+ags_midi_ump_util_get_flex_set_tempo
+ags_midi_ump_util_is_flex_set_time_signature
+ags_midi_ump_util_put_flex_set_time_signature
+ags_midi_ump_util_get_flex_set_time_signature
+ags_midi_ump_util_is_flex_set_metronome
+ags_midi_ump_util_put_flex_set_metronome
+ags_midi_ump_util_get_flex_set_metronome
+ags_midi_ump_util_is_flex_set_key_signature
+ags_midi_ump_util_put_flex_set_key_signature
+ags_midi_ump_util_get_flex_set_key_signature
+ags_midi_ump_util_is_flex_set_chord_name
+ags_midi_ump_util_put_flex_set_chord_name
+ags_midi_ump_util_get_flex_set_chord_name
+ags_midi_ump_util_is_flex_set_text
 <SUBSECTION Standard>
 AGS_TYPE_MIDI_UMP_UTIL
 AgsMidiUmpUtil
@@ -7197,6 +7316,9 @@ ags_osc_action_controller_get_type
 
 <SECTION>
 <FILE>ags_osc_buffer_util</FILE>
+ags_osc_buffer_util_alloc
+ags_osc_buffer_util_free
+ags_osc_buffer_util_copy
 ags_osc_buffer_util_put_int32
 ags_osc_buffer_util_get_int32
 ags_osc_buffer_util_put_timetag
@@ -7674,6 +7796,9 @@ AGS_OSC_UTIL_SLIP_END
 AGS_OSC_UTIL_SLIP_ESC
 AGS_OSC_UTIL_SLIP_ESC_END
 AGS_OSC_UTIL_SLIP_ESC_ESC
+ags_osc_util_alloc
+ags_osc_util_free
+ags_osc_util_copy
 ags_osc_util_type_tag_string_count_type
 ags_osc_util_meta_data
 ags_osc_util_mime_header
@@ -9035,6 +9160,27 @@ ags_resize_audio_get_type
 <SECTION>
 <FILE>ags_samplerate_coeffs</FILE>
 
+</SECTION>
+
+<SECTION>
+<FILE>ags_samplerate_process</FILE>
+ARRAY_LEN
+OFFSETOF
+MAKE_INCREMENT_T
+SHIFT_BITS
+FP_ONE
+INV_FP_ONE
+SRC_MAX_RATIO
+SRC_MAX_RATIO_STR
+SRC_MIN_RATIO_DIFF
+MAX
+MIN
+increment_t
+psf_lrint
+is_bad_src_ratio
+int_to_fp
+fp_fraction_part
+ags_samplerate_process_resample_util
 </SECTION>
 
 <SECTION>
