--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = m4 po lib
 
-AM_DISTCHECK_CONFIGURE_FLAGS = --enable-introspection --enable-vst3 --with-poppler --with-gtk-unix-print
+AM_DISTCHECK_CONFIGURE_FLAGS = --enable-introspection --with-poppler --with-gtk-unix-print
 
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
