--- a/ags/test/app/meson.build
+++ b/ags/test/app/meson.build
@@ -15,6 +15,7 @@ interactive_test_dependencies = [
   instpatch_dependency,
   json_glib_dependency,
   dependency('cairo-xlib'),
+  dependency('xtst'),
   compiler.find_library('m', required: true),
 ]
 
