implemented note 256th support of ags-fx-notation

--- a/libags.sym.in
+++ b/libags.sym.in
@@ -410,6 +410,7 @@ ags_soundcard_set_start_note_offset
 ags_soundcard_get_start_note_offset
 ags_soundcard_set_note_offset
 ags_soundcard_get_note_offset
+ags_soundcard_get_note_256th_offset
 ags_soundcard_set_note_offset_absolute
 ags_soundcard_get_note_offset_absolute
 ags_soundcard_set_loop
