--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -660,6 +660,8 @@ ags_note_get_release
 ags_note_set_release
 ags_note_get_ratio
 ags_note_set_ratio
+ags_note_get_feed_x_256th
+ags_note_set_feed_x_256th
 ags_note_get_x0_256th
 ags_note_set_x0_256th
 ags_note_get_x1_256th
@@ -2859,6 +2861,8 @@ ags_fx_notation_audio_set_flags
 ags_fx_notation_audio_unset_flags
 ags_fx_notation_audio_get_pattern_mode
 ags_fx_notation_audio_set_pattern_mode
+ags_fx_notation_audio_get_note_256th_mode
+ags_fx_notation_audio_set_note_256th_mode
 ags_fx_notation_audio_get_feed_note
 ags_fx_notation_audio_add_feed_note
 ags_fx_notation_audio_remove_feed_note
