implemented note 256th getter/setter of util

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -353,6 +353,10 @@ ags_noise_util_get_frame_count
 ags_noise_util_set_frame_count
 ags_noise_util_get_offset
 ags_noise_util_set_offset
+ags_noise_util_get_note_256th_mode
+ags_noise_util_set_note_256th_mode
+ags_noise_util_get_offset_256th
+ags_noise_util_set_offset_256th
 ags_noise_util_compute_s8
 ags_noise_util_compute_s16
 ags_noise_util_compute_s24
@@ -396,6 +400,14 @@ ags_fast_pitch_util_get_vibrato_tuning
 ags_fast_pitch_util_set_vibrato_tuning
 ags_fast_pitch_util_get_vibrato_lfo_offset
 ags_fast_pitch_util_set_vibrato_lfo_offset
+ags_fast_pitch_util_get_frame_count
+ags_fast_pitch_util_set_frame_count
+ags_fast_pitch_util_get_offset
+ags_fast_pitch_util_set_offset
+ags_fast_pitch_util_get_note_256th_mode
+ags_fast_pitch_util_set_note_256th_mode
+ags_fast_pitch_util_get_offset_256th
+ags_fast_pitch_util_set_offset_256th
 ags_fast_pitch_util_pitch_s8
 ags_fast_pitch_util_pitch_s16
 ags_fast_pitch_util_pitch_s24
@@ -1200,6 +1212,14 @@ ags_hq_pitch_util_get_vibrato_tuning
 ags_hq_pitch_util_set_vibrato_tuning
 ags_hq_pitch_util_get_vibrato_lfo_offset
 ags_hq_pitch_util_set_vibrato_lfo_offset
+ags_hq_pitch_util_get_frame_count
+ags_hq_pitch_util_set_frame_count
+ags_hq_pitch_util_get_offset
+ags_hq_pitch_util_set_offset
+ags_hq_pitch_util_get_note_256th_mode
+ags_hq_pitch_util_set_note_256th_mode
+ags_hq_pitch_util_get_offset_256th
+ags_hq_pitch_util_set_offset_256th
 ags_hq_pitch_util_pitch_s8
 ags_hq_pitch_util_pitch_s16
 ags_hq_pitch_util_pitch_s24
@@ -1356,6 +1376,10 @@ ags_fm_synth_util_get_frame_count
 ags_fm_synth_util_set_frame_count
 ags_fm_synth_util_get_offset
 ags_fm_synth_util_set_offset
+ags_fm_synth_util_get_note_256th_mode
+ags_fm_synth_util_set_note_256th_mode
+ags_fm_synth_util_get_offset_256th
+ags_fm_synth_util_set_offset_256th
 ags_fm_synth_util_compute_sin_s8
 ags_fm_synth_util_compute_sin_s16
 ags_fm_synth_util_compute_sin_s24
@@ -1528,6 +1552,14 @@ ags_fluid_interpolate_linear_util_get_vibrato_tuning
 ags_fluid_interpolate_linear_util_set_vibrato_tuning
 ags_fluid_interpolate_linear_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_linear_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_linear_util_get_frame_count
+ags_fluid_interpolate_linear_util_set_frame_count
+ags_fluid_interpolate_linear_util_get_offset
+ags_fluid_interpolate_linear_util_set_offset
+ags_fluid_interpolate_linear_util_get_note_256th_mode
+ags_fluid_interpolate_linear_util_set_note_256th_mode
+ags_fluid_interpolate_linear_util_get_offset_256th
+ags_fluid_interpolate_linear_util_set_offset_256th
 ags_fluid_interpolate_linear_util_pitch_s8
 ags_fluid_interpolate_linear_util_pitch_s16
 ags_fluid_interpolate_linear_util_pitch_s24
@@ -1577,6 +1609,10 @@ ags_chorus_util_get_pitch_type
 ags_chorus_util_set_pitch_type
 ags_chorus_util_get_pitch_util
 ags_chorus_util_set_pitch_util
+ags_chorus_util_get_note_256th_mode
+ags_chorus_util_set_note_256th_mode
+ags_chorus_util_get_offset_256th
+ags_chorus_util_set_offset_256th
 ags_chorus_util_compute_s8
 ags_chorus_util_compute_s16
 ags_chorus_util_compute_s24
@@ -2350,6 +2386,14 @@ ags_fluid_interpolate_none_util_get_vibrato_tuning
 ags_fluid_interpolate_none_util_set_vibrato_tuning
 ags_fluid_interpolate_none_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_none_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_none_util_get_frame_count
+ags_fluid_interpolate_none_util_set_frame_count
+ags_fluid_interpolate_none_util_get_offset
+ags_fluid_interpolate_none_util_set_offset
+ags_fluid_interpolate_none_util_get_note_256th_mode
+ags_fluid_interpolate_none_util_set_note_256th_mode
+ags_fluid_interpolate_none_util_get_offset_256th
+ags_fluid_interpolate_none_util_set_offset_256th
 ags_fluid_interpolate_none_util_pitch_s8
 ags_fluid_interpolate_none_util_pitch_s16
 ags_fluid_interpolate_none_util_pitch_s24
@@ -2598,6 +2642,10 @@ ags_common_pitch_util_get_vibrato_tuning
 ags_common_pitch_util_set_vibrato_tuning
 ags_common_pitch_util_get_vibrato_lfo_offset
 ags_common_pitch_util_set_vibrato_lfo_offset
+ags_common_pitch_util_get_note_256th_mode
+ags_common_pitch_util_set_note_256th_mode
+ags_common_pitch_util_get_offset_256th
+ags_common_pitch_util_set_offset_256th
 ags_common_pitch_util_pitch
 ags_automation_get_type
 ags_automation_flags_get_type
@@ -3161,6 +3209,10 @@ ags_sf2_synth_util_get_pitch_type
 ags_sf2_synth_util_set_pitch_type
 ags_sf2_synth_util_get_pitch_util
 ags_sf2_synth_util_set_pitch_util
+ags_sf2_synth_util_get_note_256th_mode
+ags_sf2_synth_util_set_note_256th_mode
+ags_sf2_synth_util_get_offset_256th
+ags_sf2_synth_util_set_offset_256th
 ags_sf2_synth_util_load_instrument
 ags_sf2_synth_util_load_midi_locale
 ags_sf2_synth_util_compute_s8
@@ -3552,6 +3604,10 @@ ags_synth_util_get_frame_count
 ags_synth_util_set_frame_count
 ags_synth_util_get_offset
 ags_synth_util_set_offset
+ags_synth_util_get_note_256th_mode
+ags_synth_util_set_note_256th_mode
+ags_synth_util_get_offset_256th
+ags_synth_util_set_offset_256th
 ags_synth_util_get_xcross_count_s8
 ags_synth_util_get_xcross_count_s16
 ags_synth_util_get_xcross_count_s24
@@ -3643,6 +3699,14 @@ ags_fluid_interpolate_7th_order_util_get_vibrato_tuning
 ags_fluid_interpolate_7th_order_util_set_vibrato_tuning
 ags_fluid_interpolate_7th_order_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_7th_order_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_4th_order_util_get_frame_count
+ags_fluid_interpolate_4th_order_util_set_frame_count
+ags_fluid_interpolate_4th_order_util_get_offset
+ags_fluid_interpolate_4th_order_util_set_offset
+ags_fluid_interpolate_4th_order_util_get_note_256th_mode
+ags_fluid_interpolate_4th_order_util_set_note_256th_mode
+ags_fluid_interpolate_4th_order_util_get_offset_256th
+ags_fluid_interpolate_4th_order_util_set_offset_256th
 ags_fluid_interpolate_7th_order_util_pitch_s8
 ags_fluid_interpolate_7th_order_util_pitch_s16
 ags_fluid_interpolate_7th_order_util_pitch_s24
@@ -3737,6 +3801,14 @@ ags_fluid_interpolate_4th_order_util_get_vibrato_tuning
 ags_fluid_interpolate_4th_order_util_set_vibrato_tuning
 ags_fluid_interpolate_4th_order_util_get_vibrato_lfo_offset
 ags_fluid_interpolate_4th_order_util_set_vibrato_lfo_offset
+ags_fluid_interpolate_7th_order_util_get_frame_count
+ags_fluid_interpolate_7th_order_util_set_frame_count
+ags_fluid_interpolate_7th_order_util_get_offset
+ags_fluid_interpolate_7th_order_util_set_offset
+ags_fluid_interpolate_7th_order_util_get_note_256th_mode
+ags_fluid_interpolate_7th_order_util_set_note_256th_mode
+ags_fluid_interpolate_7th_order_util_get_offset_256th
+ags_fluid_interpolate_7th_order_util_set_offset_256th
 ags_fluid_interpolate_4th_order_util_pitch_s8
 ags_fluid_interpolate_4th_order_util_pitch_s16
 ags_fluid_interpolate_4th_order_util_pitch_s24
@@ -4100,6 +4172,10 @@ ags_sfz_synth_util_get_pitch_type
 ags_sfz_synth_util_set_pitch_type
 ags_sfz_synth_util_get_pitch_util
 ags_sfz_synth_util_set_pitch_util
+ags_sfz_synth_util_get_note_256th_mode
+ags_sfz_synth_util_set_note_256th_mode
+ags_sfz_synth_util_get_offset_256th
+ags_sfz_synth_util_set_offset_256th
 ags_sfz_synth_util_load_instrument
 ags_sfz_synth_util_compute_s8
 ags_sfz_synth_util_compute_s16
