completed note 256th support

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -4627,6 +4627,8 @@ ags_midi_util_get_song_select
 ags_midi_util_to_smf
 ags_midi_util_delta_time_to_offset
 ags_midi_util_offset_to_delta_time
+ags_midi_util_delta_time_to_note_256th_offset
+ags_midi_util_note_256th_offset_to_delta_time
 ags_resample_util_get_type
 ags_resample_util_alloc
 ags_resample_util_init
