--- a/configure.ac
+++ b/configure.ac
@@ -8,11 +8,13 @@
 # Process this file with autoconf to produce a configure script.
 
 LT_CURRENT=6
-LT_REVISION=0
-LT_AGE=13
+LT_REVISION=1
+LT_AGE=0
+
+m4_define([ags_version], [6.1.0])
 
 AC_PREREQ([2.69])
-AC_INIT([gsequencer],[6.0.13],[jkraehemann@gmail.com])
+AC_INIT([gsequencer],m4_defn([ags_version]),[jkraehemann@gmail.com])
 AM_INIT_AUTOMAKE([subdir-objects -Wno-portability])
 AC_CONFIG_SRCDIR([ags/config.h.in])
 AC_CONFIG_HEADERS([ags/config.h])
