--- a/ags/meson.build
+++ b/ags/meson.build
@@ -659,6 +659,7 @@ libags_audio_sources = files(
   'audio/task/ags_resize_audio.c',
   'audio/task/ags_seek_soundcard.c',
   'audio/task/ags_set_audio_channels.c',
+  'audio/task/ags_set_backlog.c',
   'audio/task/ags_set_buffer_size.c',
   'audio/task/ags_set_device.c',
   'audio/task/ags_set_format.c',
@@ -1872,6 +1873,7 @@ libags_audio_audio_task_headers = [
   'audio/task/ags_resize_audio.h',
   'audio/task/ags_seek_soundcard.h',
   'audio/task/ags_set_audio_channels.h',
+  'audio/task/ags_set_backlog.h',
   'audio/task/ags_set_buffer_size.h',
   'audio/task/ags_set_device.h',
   'audio/task/ags_set_format.h',
