refactored ags-fx-buffer

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -4006,6 +4006,7 @@ ags_oss_devout_realloc_buffer
 ags_oss_devout_new
 ags_audio_signal_get_type
 ags_audio_signal_flags_get_type
+ags_audio_signal_stream_mode_get_type
 ags_audio_signal_get_obj_mutex
 ags_audio_signal_stream_lock
 ags_audio_signal_stream_unlock
@@ -4028,6 +4029,8 @@ ags_audio_signal_get_buffer_size
 ags_audio_signal_set_buffer_size
 ags_audio_signal_get_format
 ags_audio_signal_set_format
+ags_audio_signal_get_attack
+ags_audio_signal_set_attack
 ags_audio_signal_get_note
 ags_audio_signal_set_note
 ags_audio_signal_add_note
@@ -4036,6 +4039,8 @@ ags_audio_signal_get_stream
 ags_audio_signal_set_stream
 ags_audio_signal_test_stream_mode
 ags_audio_signal_set_stream_mode
+ags_audio_signal_get_note_256th_attack
+ags_audio_signal_set_note_256th_attack
 ags_audio_signal_refresh_data
 ags_audio_signal_add_stream
 ags_audio_signal_stream_resize
