fixed missing include

--- a/libags.sym.in
+++ b/libags.sym.in
@@ -427,6 +427,9 @@ ags_soundcard_get_start_note_offset
 ags_soundcard_set_note_offset
 ags_soundcard_get_note_offset
 ags_soundcard_get_note_256th_offset
+ags_soundcard_get_note_256th_attack
+ags_soundcard_get_note_256th_attack_at_position
+ags_soundcard_get_note_256th_attack_position
 ags_soundcard_set_note_offset_absolute
 ags_soundcard_get_note_offset_absolute
 ags_soundcard_set_loop
